--- a/Instagram/PostTableViewCell.xib
+++ b/Instagram/PostTableViewCell.xib
@@ -9,11 +9,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="504" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Instagram" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="385" height="504"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="657" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Instagram" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="385" height="657"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="385" height="504"/>
+                <rect key="frame" x="0.0" y="0.0" width="385" height="657"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eDc-Mk-rqm">
@@ -53,8 +53,17 @@
                         </constraints>
                         <state key="normal" image="comment"/>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o4D-US-Ydn">
+                        <rect key="frame" x="30" y="536" width="325" height="100"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PFa-a7-4pB">
-                        <rect key="frame" x="30" y="426" width="325" height="57"/>
+                        <rect key="frame" x="30" y="426" width="325" height="100"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="100" id="Yn5-ws-h3G"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -65,16 +74,19 @@
                     <constraint firstItem="Gi6-mC-IsK" firstAttribute="centerY" secondItem="mzA-m3-fxM" secondAttribute="centerY" id="8pg-hs-ADw"/>
                     <constraint firstItem="mzA-m3-fxM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="APk-EG-wqj"/>
                     <constraint firstAttribute="trailingMargin" secondItem="Q0o-Qt-Lxa" secondAttribute="trailing" constant="10" id="F3D-R8-TqV"/>
-                    <constraint firstItem="PFa-a7-4pB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="J5n-Lv-Tjj"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="PFa-a7-4pB" secondAttribute="trailing" constant="10" id="JlT-Lv-dFY"/>
                     <constraint firstItem="eDc-Mk-rqm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="NiW-gt-5Ci"/>
+                    <constraint firstItem="PFa-a7-4pB" firstAttribute="top" secondItem="mzA-m3-fxM" secondAttribute="bottom" constant="10" id="SGq-zD-7dG"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="o4D-US-Ydn" secondAttribute="trailing" constant="10" id="SfD-Rm-hwo"/>
                     <constraint firstItem="mzA-m3-fxM" firstAttribute="top" secondItem="eDc-Mk-rqm" secondAttribute="bottom" constant="10" id="TuC-0g-FOh"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="PFa-a7-4pB" secondAttribute="bottom" constant="10" id="Xdh-i3-uXO"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="PFa-a7-4pB" secondAttribute="trailing" constant="10" id="ZyC-h8-Uj2"/>
                     <constraint firstItem="Q0o-Qt-Lxa" firstAttribute="leading" secondItem="Gi6-mC-IsK" secondAttribute="trailing" constant="10" id="bc7-gZ-TwE"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="o4D-US-Ydn" secondAttribute="bottom" constant="10" id="dfQ-XF-8WD"/>
                     <constraint firstItem="eDc-Mk-rqm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="jdx-Jq-8Nn"/>
+                    <constraint firstItem="o4D-US-Ydn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="mrE-Du-uhA"/>
                     <constraint firstAttribute="trailingMargin" secondItem="eDc-Mk-rqm" secondAttribute="trailing" id="nFI-tY-MyL"/>
-                    <constraint firstItem="PFa-a7-4pB" firstAttribute="top" secondItem="mzA-m3-fxM" secondAttribute="bottom" constant="10" id="nON-2M-Ay7"/>
+                    <constraint firstItem="PFa-a7-4pB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="sGU-gQ-DuY"/>
                     <constraint firstItem="mGe-aZ-ZMJ" firstAttribute="centerY" secondItem="mzA-m3-fxM" secondAttribute="centerY" id="ung-5M-itX"/>
+                    <constraint firstItem="o4D-US-Ydn" firstAttribute="top" secondItem="PFa-a7-4pB" secondAttribute="bottom" constant="10" id="x6c-qn-JIo"/>
                     <constraint firstItem="Q0o-Qt-Lxa" firstAttribute="centerY" secondItem="mzA-m3-fxM" secondAttribute="centerY" id="yQM-2K-wlF"/>
                     <constraint firstItem="Gi6-mC-IsK" firstAttribute="leading" secondItem="mGe-aZ-ZMJ" secondAttribute="trailing" constant="10" id="zwI-g6-XOE"/>
                 </constraints>
@@ -82,13 +94,14 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="captionLabel" destination="PFa-a7-4pB" id="d7W-W3-NP5"/>
-                <outlet property="commentButton" destination="Gi6-mC-IsK" id="ADl-aE-V77"/>
+                <outlet property="commentButton" destination="Gi6-mC-IsK" id="Wuo-kq-Acd"/>
+                <outlet property="commentLabel" destination="o4D-US-Ydn" id="EcG-Le-hzo"/>
                 <outlet property="dateLabel" destination="Q0o-Qt-Lxa" id="NFf-P2-NZ5"/>
                 <outlet property="likeButton" destination="mzA-m3-fxM" id="hxI-8f-WpS"/>
                 <outlet property="likeLabel" destination="mGe-aZ-ZMJ" id="Tu1-MP-vum"/>
                 <outlet property="postImageView" destination="eDc-Mk-rqm" id="Y2P-kL-N8i"/>
             </connections>
-            <point key="canvasLocation" x="184.78260869565219" y="106.47321428571428"/>
+            <point key="canvasLocation" x="184.78260869565219" y="157.70089285714286"/>
         </tableViewCell>
     </objects>
     <resources>
